@@ -3682,6 +3682,7 @@ discriminant $D$ such that $d=D*f^2$ and set \kbd{*pt\_f} to $f$
 
 \fun{long}{moebiusu_fact}{GEN fa} same, where \kbd{fa} is \kbd{factoru(n)}.
 
+\fun{ulong}{radicalu}{ulong n}, product of primes dividing $n$.
 
 \fun{GEN}{divisorsu}{ulong n}, returns the divisors of $n$ in a
 \typ{VECSMALL}, sorted by increasing order.
